@@ -1,2 +1,25 @@
 [] use CBOR::Free and Mojo::WebSocket in subscription API
 [] write a basic terminal based bluesky client as an example
+
+Lexicon
+
+[x] At::Lexicon::app::bsky::actor                       31
+[x] At::Lexicon::app::bsky::embed                       32
+[x] At::Lexicon::app::bsky::feed                        33
+[x] At::Lexicon::app::bsky::graph                       34
+[x] At::Lexicon::app::bsky::notificaton                 35
+[x] At::Lexicon::app::bsky::richtext                    36
+[x] At::Lexicon::app::bsky::unspecced                   37
+
+[x] At::Lexicon::com::atproto::admin                    21
+[x] At::Lexicon::com::atproto::identity                 22
+[x] At::Lexicon::com::atproto::label                    23
+[x] At::Lexicon::com::atproto::moderation               24
+[] At::Lexicon::com::atproto::repo                      25
+[x] At::Lexicon::com::atproto::server                   26
+[x] At::Lexicon::com::atproto::sync                     27
+[x] At::Lexicon::com::atproto::temp                     28
+
+
+
+[] use CBOR::Free and Mojo::WebSocket in subscription API
