@@ -1,0 +1,27 @@
+use strict;
+use warnings;
+use Test2::V0;
+use Test2::Tools::Class qw[isa_ok can_ok];
+#
+BEGIN { chdir '../' if !-d 't'; }
+use lib '../lib', 'lib', '../blib/arch', '../blib/lib', 'blib/arch', 'blib/lib', '../../', '.';
+#
+use At;
+#
+subtest 'live' => sub {
+    my $at  = At->new( host => 'https://bsky.social', identifier => 'atperl.bsky.social', password => 'ck2f-bqxl-h54l-xm3l' );
+    my $res = $at->createRecord(
+        collection => 'app.bsky.feed.post',
+        record     => { '$type' => 'app.bsky.feed.post', text => 'Hello world! I posted this via the API.', createdAt => time }
+    );
+    pass 'todo'
+
+        #~ use Data::Dump;
+        #~ ddx $at->deleteRecord(
+        #~ # repo
+        #~ collection =>'app.bsky.feed.post',
+        #~ rkey => $res->{cid}
+        #~ );
+};
+#
+done_testing;
